# robot-fabrik-cga

./: .gitignore  Makefile  README.md  err  ik.ipynb  out  pendulum.ipynb  pendulum.py  pyproject.toml  requirements.txt  setup.py  test.py
.ipynb_checkpoints/: ik-checkpoint.ipynb  pendulum-checkpoint.ipynb
.lego/accounts/acme-v02.api.letsencrypt.org/pau.carre@gmail.com/keys/: pau.carre@gmail.com.key
fabrik/: ConformalGeometricAlgebra.py  FabrikSolver.py  Joint.py  JointChain.py  PointChain.py  cga.py  fabrik.py  fabrik_solver.py  joint_chain.py  kinematics.py
fabrik/dql/: deep_q_network.py
fabrik/reference/: fabrik_solver.py  joint_chain.py
linguamechanica/: agent.py  environment.py  kinematics.py  main.py  models.py  train.py  training_context.py
linguamechanica/.ipynb_checkpoints/: agent-checkpoint.py  environment-checkpoint.py  kinematics-checkpoint.py  models-checkpoint.py  train-checkpoint.py  training_context-checkpoint.py
linguamechanica/dql/: actor_critic.py  actor_critic_main.py  deep_q_network.py  dueling_ddqn_agent.py  main_dueling_ddqn.py  replay_memory.py  utils.py
src/: ConformalGeometricAlgebra.py  FabrikSolver.py  JointChain.py  PointChain.py  TestConformalGeometricAlgebra.py  TestFabrikSolver.py  fabrik.py
test/: TestConformalGeometricAlgebra.py  TestFabrikSolver.py
tests/: test_TestFabrikSolver.py  test_fabrik_solver.py  test_kinematics.py
tests/fabrik/: test_cga.py  test_fabrik_solver.py  test_kinematics.py
tests/fabrik/refernce/: test_fabrik_solver.py
tests/linguamechanica/: test_kinematics.py
