[tool.poetry]
name = "fabrik"
version = "0.1.0"
description = ""
authors = ["Pau Carré Cardona <pau.carre@gmail.com>"]
readme = "README.md"
packages = [{include = "fabrik"}]

[tool.poetry.dependencies]
python = "^3.10"
clifford = "^1.4.0"
coverage = "7.2.7"
black = "^23.3.0"
pytest = "^7.3.2"
pytest-coverage = "^0.0"
pytransform3d = "^3.2.0"
pyqt5 = "^5.15.9"
trimesh = "^3.22.1"
pycollada = "^0.7.2"
pydot = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

